# ContactHI

./: .gitignore  CLAUDE.md  PROJECT_INDEX.md  protocol-spec.md
contracts/: Cargo.toml  README.md
contracts/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
extension/: build.mjs  manifest.json  options.html  package-lock.json  package.json  popup.html  tsconfig.json
extension/src/background/: service-worker.ts
extension/src/content/: general.ts  gmail.ts  ui.ts
extension/src/detection/: plugin.ts  registry.ts
extension/src/detection/adapters/: gptzero.ts  index.ts  local-model.ts  originality.ts  stub.ts  winston.ts
extension/src/options/: options.ts
extension/src/popup/: popup.ts
extension/src/shared/: messages.ts  storage.ts  types.ts
router/router-node/: Dockerfile  README.md  package-lock.json  package.json
router/router-node/src/: config.ts  index.ts
router/router-node/src/middleware/: rateLimit.ts  validate.ts
router/router-node/src/routes/: health.ts  send.ts  status.ts
router/router-node/src/services/: delivery.ts  nullcone.ts  registry.ts  spacetime.ts
router/spacetimedb-module/: Cargo.toml
router/spacetimedb-module/src/: lib.rs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  did.ts  envelope.ts  errors.ts  index.ts  preferences.ts  types.ts
sdk/tests/: client.test.ts  envelope.test.ts  preferences.test.ts  setup.ts
web/chi-codes/: index.html
web/chi-contact/: index.html
